frontend/src/styles.scss
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@import "@fortawesome/fontawesome-free/scss/fontawesome";
@import "@fortawesome/fontawesome-free/scss/regular";
@import "@fortawesome/fontawesome-free/scss/solid";
@import "@fortawesome/fontawesome-free/scss/brands";

@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap");

.btn {
  @apply font-semibold
          text-xs
          py-2
          px-4
          rounded-md
          transition
          duration-300
          cursor-pointer;
}

.btn-circle {
  @apply font-semibold
          shadow-md
          text-xs
          py-2
          px-4
          rounded-full
          transition
          duration-300
          cursor-pointer;
}

.btn-primary {
  @apply bg-serapion-blue-300
          text-serapion-white
          hover:bg-serapion-purple;
}

.btn-secondary {
  @apply bg-serapion-grey-200
          text-serapion-white
          hover:bg-serapion-purple;
}

.btn-disabled {
  @apply bg-serapion-grey-100
          text-serapion-white
          cursor-not-allowed;
}

.btn-accent {
  @apply bg-serapion-green
          text-serapion-white
          hover:bg-serapion-purple;
}

.btn-warn {
  @apply bg-serapion-yellow
          text-serapion-white
          hover:bg-serapion-purple;
}

.btn-white {
  @apply bg-serapion-white
          text-serapion-grey-200
          hover:bg-serapion-purple
          hover:text-serapion-white
          dark:bg-serapion-black-200
          dark:hover:bg-serapion-purple
          dark:text-serapion-white;
}

.card {
  @apply px-2 py-4 bg-serapion-white rounded-md;
}

.link-primary {
  @apply text-serapion-blue-300 hover:text-serapion-purple;
}

.tooltip {
  @apply invisible absolute bottom-4 -right-4 z-50;
}

.has-tooltip {
  @apply relative;
}

.has-tooltip:hover .tooltip {
  @apply lg:visible transition-all duration-150;
}


$serapion-scrollbar: #a3abbd !default;

* {
  scrollbar-width: thin;
  scrollbar-color: $serapion-scrollbar rgba(0, 0, 0, 0.1);
}

*::-webkit-scrollbar {
  width: 0.2rem;
}

*::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.1);
}

*::-webkit-scrollbar-thumb {
  background-color: $serapion-scrollbar;
  border-radius: 0.2rem;
}

input[type="time"]::-webkit-calendar-picker-indicator {
  top: 0;
  left: 0;
  background: #0000;
  position: absolute;
  transform: scale(8);
  // @apply bg-serapion-grey-100;
}

